fix small theme bug in button down state
The middle of the button was too large on point-left, point-right, and capsule buttons during a button press.

--- a/themes/ace/resources/button/ace/24px/button.css
+++ b/themes/ace/resources/button/ace/24px/button.css
@@ -30,14 +30,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
     }
   }
@@ -50,14 +53,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
     }
   }
@@ -70,14 +76,17 @@
 
       &.active {
         @include slices("active_button_capsule.png", $left: 12, $right: 12, skip-middle);
+        .middle { left: 12px; right: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_capsule.png", $left: 12, $right: 12, skip-middle);
+        .middle { left: 12px; right: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_capsule.png", $left: 12, $right: 12, skip-middle);
+        .middle { left: 12px; right: 12px; }
       }
     }
   }
