--- a/themes/ace/resources/button/dark/30px/button.css
+++ b/themes/ace/resources/button/dark/30px/button.css
@@ -32,14 +32,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-right);
+        .middle { left: 12px; }
       }
     }
   }
@@ -52,14 +55,17 @@
 
       &.active {
         @include slices("active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel, &.def {
         @include slices("selected_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
 
       &.sel.active, &.def.active {
         @include slices("selected_active_button_pointer.png", $left: 12, $right: 12, skip-middle, skip-left);
+        .middle { right: 12px; }
       }
     }
   }
